# embedded-term

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml
examples/: pty.rs  replay.rs  rterm.rs
src/: ansi.rs  cell.rs  color.rs  console.rs  escape_parser.rs  graphic.rs  lib.rs  log.rs  text_buffer.rs  text_buffer_cache.rs
